k8s/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-front
spec:
  type: NodePort
  selector:
    app: test-front
    tier: front
  ports:
    - port: 80
      nodePort: 30000
